<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/continentSelectionSurvivalConstraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bangkok_city">
        <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:padding="5dp"
                android:background="#99000000"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                android:layout_weight="1"
                tools:layout_editor_absoluteX="15dp"
                tools:layout_editor_absoluteY="15dp">

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <Button
                        android:id="@+id/europeSMBtn"
                        style="@style/buttonStyle"
                        android:text="@string/europeBtn" />

                <Button
                        android:id="@+id/africaSMBtn"
                        style="@style/buttonStyle"
                        android:text="@string/africaBtn" />
            </TableRow>

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <Button
                        android:id="@+id/southAmericaSMBtn"
                        style="@style/buttonStyle"
                        android:text="@string/south_americaBtn" />

                <Button
                        android:id="@+id/northAmericaSMBtn"
                        style="@style/buttonStyle"
                        android:text="@string/north_americaBtn" />
            </TableRow>

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <Button
                        android:id="@+id/asiaSMBtn"
                        style="@style/buttonStyle"
                        android:text="@string/asiaBtn" />

                <Button
                        android:id="@+id/australiaSMBtn"
                        style="@style/buttonStyle"
                        android:text="@string/australiaBtn" />
            </TableRow>

        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>