<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/titleConstraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:id="@+id/titleImage"
                android:layout_width="0dp"
                android:layout_height="@dimen/image_header_height"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_marginEnd="@dimen/horizontal_margin"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@mipmap/ccq_round_384x384"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/logo" />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/usernameET" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:hint="@string/username" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/titleImage"
                android:autofillHints="@string/password" />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/passwordET" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/usernameET" android:hint="@string/password"
                android:autofillHints="@string/username" />
        <Button
                android:text="@string/login"
                android:id="@+id/logInBtn"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                style="@style/buttonStyle"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/passwordET"
                android:layout_marginStart="32dp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"/>
        <Button
                android:text="@string/register"
                android:id="@+id/registerBtn"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                style="@style/buttonStyle"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/logInBtn"
                android:layout_marginStart="32dp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"/>
        <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/facebookBtn"
                android:contentDescription="@string/facebookbutton"
                android:scaleType="fitCenter"
                android:background="@drawable/facebook512x512"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/googleBtn" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/registerBtn"/>
        <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/twitterBtn" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/registerBtn"
                android:contentDescription="@string/twitter_button"
                android:scaleType="fitCenter"
                android:background="@drawable/twitter_rounded_512x512"
                app:layout_constraintStart_toEndOf="@+id/googleBtn"
                android:layout_marginStart="8dp"/>
        <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/googleBtn" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/registerBtn"
                android:contentDescription="@string/google_button"
                android:scaleType="fitCenter"
                android:background="@drawable/google_512x512"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>